--- a/projs/batchfield-react/src/components/landingCarousel.css
+++ b/projs/batchfield-react/src/components/landingCarousel.css
@@ -1,317 +1,5 @@
-.landing {
-   #price_visit_others_links{
-     background-image: none;
-     padding-top:1em;
-   }
-}
-
-
-
-
-
-      .section.landing-promotion{
-        padding-top:20px;
-        .row{
-          margin-bottom:0;
-        }
-      }
-      
-      .landing-owl-carouse-wrapper{
-        padding:0 !important;
-      }
-
-      .landing-owl-carousel.owl-theme.owl-loaded{
-        height:initial !important;
-      }
-
-      .landing-owl-carousel .owl-stage{
-        padding:30px 0px;
-      }
-
-      .landing-owl-carousel .owl-controls{
-        .owl-nav .owl-prev,.owl-nav .owl-next{
-            display:flex;
-            align-items: center;
-            justify-content: center;
-            top:30px;
-            bottom:30px;
-            transition:all .2s ease-in-out;
-            background-color: rgba(122,122,122,.5);
-            &:hover{
-              background-color: rgba(122,122,122,.8);
-            };
-
-        }
-
-      }
-
-      .landing-owl-carousel .item .link-to-page img{
-          border-radius: 5px;
-          height:initial;
-          width:100%;
-          -webkit-box-shadow: 10px 10px 32px 0px rgba(0,0,0,0.2);
-          -moz-box-shadow: 10px 10px 32px 0px rgba(0,0,0,0.2);
-          box-shadow: 10px 10px 32px 0px rgba(0,0,0,0.2);
-      }
-
-      
-      .landing-owl-carousel .item .link-to-page{
-        padding:0px 10px;
-        display:block;
-        transition:.2s ease-in-out;
-      }
-
-      .landing-owl-carousel .item .link-to-page:hover{
-        transform:scale(1.01);
-
-      }
-
-      @media only screen and (min-width:640px) {
-            .landing-owl-carousel .item .link-to-page{
-              padding:0px 30px;
-            }
-      }
-
-      @media only screen and (min-width:1600px) {
-            .landing-owl-carousel .item .link-to-page{
-              padding:0px 40px;
-            }
-      }
-
-
-
-
-/*START OF passbild promotion link card*/
-      .passbild-flex-box{
-
-        display:inline-block;
-        font-size:20px;
-        height:initial;
-            .flex-child.left{
-                display:flex;
-                justify-content: center;
-                align-items:center;
-                width:40%;
-                background-color:#08A8F0;
-                  .passbild-image{
-                    border-radius: 0;
-                    width:60%;
-                    height:auto;
-                    box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.2);
-                  }
-            }
-            .flex-child.right{
-                font-size:1em;
-                width:60%;
-                background-color:white;
-                  h2.passbild-promotion-header{
-                    font-size:1em;
-                  }
-                  h3.passbild-promotion-sub-header{
-                    font-size:0.5em;
-                  }
-                  ul{
-                    text-align:left;
-                    font-size:0.5em;
-                  }
-            }
-      }
-
-/*END OF passbild promotion link card*/
-
-.link-to-page.passfoto{
-  position:relative;
-}
-
-
-
-
-
-
-/* START OF passfoto promotion card*/
-  .passfoto-promotion-card {
-    font-family: "Open Sans";
-    position:absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    color: #000;
-    font-size: 16px;
-  }
-  .passfoto-promotion-card-left-block {
-    border-radius: 5px 0px 0px 5px;
-    position: relative;
-    width: 40%;
-    height: 100%;
-    float: left;
-    background-color: #ffeb3b;
-  }
-  .passfoto-promotion-card-right-block {
-    border-radius: 0px 5px 5px 0px;
-    width: 60%;
-    height: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    float: left;
-    background-color: #fff;
-    text-align: center;
-  }
-  .passfoto-promotion-card-image {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 55% !important;
-    height: auto !important;
-    border-radius: 0px !important;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-  .passfoto-promotion-card-price-wrapper {
-    position: absolute;
-    top: 50%;
-    right: 0px;
-    width: 2em;
-    height: 2em;
-    border: 0.05em solid #000;
-    background-color: #fff;
-    -webkit-transform: translate(50%, -50%);
-    -ms-transform: translate(50%, -50%);
-    transform: translate(50%, -50%);
-  }
-  .passfoto-promotion-card-price {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin-top:0px;
-    margin-bottom: 0px;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    font-size: 0.9em;
-    font-weight: 700;
-  }
-  .passfoto-promotion-card-price--body-text-wrapper {
-    position: relative;
+.promotion-link {
+  display: block; }
+  .promotion-link img {
     width: 100%;
-    height: 100%;
-  }
-  .heading {
-    font-size: 0.1em;
-  }
-  .passfoto-promotion-card-headline {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-right: 0.75em;
-    padding-left: 0.75em;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 0.5em;
-    line-height: 1.5em;
-    font-weight: 700;
-  }
-  .passfoto-promotion-card-headline.sub-headline {
-    margin-bottom: 1em;
-    padding-left:1em;
-    padding-right:1em;
-    font-size: 0.4em;
-    font-weight: 300;
-  }
-  .passfoto-promotion-card-ul {
-    padding-left: 5em;
-    font-size: 0.45em;
-    line-height: 1em;
-    text-align: left;
-  }
-  .passfoto-promotion-card-li {
-    font-size: 0.6em;
-
-    &:before {
-      content: '\f00c';
-      font-family: 'FontAwesome';
-      float: left;
-      margin-left: -1.5em;
-      color: #28B6F6;
-    }
-  }
-
-
-
-
-
-@media screen and (min-width:389px) {
-     .passfoto-promotion-card{
-        font-size:18px;
-     }
-}
-
-@media screen and (min-width:446px) {
-     .passfoto-promotion-card{
-        font-size:20px;
-     }
-    
-}
-
-@media screen and (min-width:506px) {
-     .passfoto-promotion-card{
-        font-size:23px;
-     }
-}
-
-
-
-@media screen and (min-width:569px) {
-     .passfoto-promotion-card{
-        font-size:29px;
-     }
-     .passfoto-promotion-card-right-block{
-       padding-top: 12px;
-     }
-}
-
-
-@media screen and (min-width:648px) {
-     .passfoto-promotion-card{
-        font-size:29px;
-     }
-     .passfoto-promotion-card-headline.sub-headline{
-        padding-left:2em;
-        padding-right:2em;
-     }
-}
-
-@media screen and (min-width:845px) {
-     .passfoto-promotion-card{
-        font-size:33px;
-     }
-}
-
-@media screen and (min-width:960px) {
-     .passfoto-promotion-card{
-        font-size:38px;
-     }
-}
-
-@media screen and (min-width:1006px) {
-     .passfoto-promotion-card{
-        font-size:44px;
-     }
-     .passfoto-promotion-card-right-block{
-       padding-top: 16px;
-     }
-}
-
-
-@media screen and (min-width:1210px) {
-     .passfoto-promotion-card{
-        font-size:50px;
-     }
-}
-
-/* END OF passfoto promotion card*/
-
-
-
+    height: 100%; }
