--- a/projs/batchfield/app/styles/components/_style.scss
+++ b/projs/batchfield/app/styles/components/_style.scss
@@ -600,7 +600,7 @@ nav .right.hide-on-med-and-down .fa.fa-gift{
       }
 
 
-/* care restructure*/
+/* card restructure*/
 .container.photo-gallery .card-reveal{
   padding:0px;
 }
