--- a/projs/batchfield-react/src/App.css
+++ b/projs/batchfield-react/src/App.css
@@ -19,3 +19,6 @@
     transform: rotate(0deg); }
   to {
     transform: rotate(360deg); } }
+
+h1, h2, h3, h4, h5, h6, p, a {
+  font-family: "Roboto"; }
