--- a/projs/batchfield-react/src/components/nav.scss
+++ b/projs/batchfield-react/src/components/nav.scss
@@ -1,9 +1,19 @@
 
-/*start of sticky header*/
+
+.nav-section{
+	.header-contact-info{
+		color:white;
+		margin-left:10px;
+		float:right;
+		font-weight:100;
+	}
+
+	.container{
+		clear:both;
+	}
 
 
-.section.nav_bar_very_top{
-  position:fixed;
+
 }
 
 
@@ -11,73 +21,28 @@
 
 
 
-nav .brand-logo{
-  height:100%;
-}
 
-@media only screen and (min-width:992px){
-      nav .brand-logo{
-      left:0;
-    }
+
+
+.nav-section{
+  background-color:rgba(0,0,0,.5);
+  clear:both;
   
-}
+	nav{
+		 background-color:rgba(0,0,0,0);
+		 box-shadow: none;
+		 .logo-wrapper{
+		 	   	 margin-right:20px;
+				 .logo-img{
+					width:130px;
+					padding:7px 0;
+				  }
 
-
-      nav .brand-logo img{
-        vertical-align:middle;
-        width:110px;
-      }
-
-
-nav{
-  box-shadow: none;
-  -webkit-transition: all 1s ease;
-  transition: all 1s ease;
-}
-
-
-nav ul li a{
-  text-transform: uppercase;
-  font-weight:400;
-}
-
-nav ul li a:hover{
-  text-transform: uppercase;
-  background-color:rgba(3,169,244,0.65);
-}
-
-nav ul.left{
-  padding-left:130px;
-}
-
-
-
-.button-collapse{
-  color:#03a9f4 !important;
-}
-
-.sticky{  
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+		 }
+		 
+	}
 
 }
-/*
-.text-color{
-  color:black !important;
-}
-*/
 
 
 
-
-li.active{
-  background-color:rgba(3,169,244,0.65) !important;
-}
-
-.side-nav{
-  z-index:9999;
-}
-
-.side-nav li{
-  padding:0;
-}
-/* end of sticky header*/
