--- a/projs/batchfield-react/src/components/footer.css
+++ b/projs/batchfield-react/src/components/footer.css
@@ -1,7 +1,12 @@
 footer.page-footer {
   padding-top: 22px;
   margin: 0;
-  background-color: #3D3D3D; }
+  background-color: #3D3D3D;
+  text-align: left; }
+  footer.page-footer .col.s12 {
+    margin-bottom: 30px; }
+  footer.page-footer .col.s12:last-of-type {
+    margin-bottom: 0px; }
 
 footer.page-footer h5 {
   font-size: 1.4rem; }
