--- a/projs/batchfield-react/src/components/FotoShooting.css
+++ b/projs/batchfield-react/src/components/FotoShooting.css
@@ -120,7 +120,7 @@
 
 .container.photo-gallery .card-action .button {
   margin-right: 0 !important;
-  color: #29b6f6;
+  color: #29b6f6 !important;
   background-color: white;
   border: 2px solid #29b6f6;
   padding: 10px;
@@ -128,7 +128,7 @@
   transition: color 0.3s, background-color 0.3s; }
 
 .container.photo-gallery .card-action .button:hover {
-  color: white;
+  color: white !important;
   background-color: #29b6f6; }
 
 @media only screen and (max-width: 992px) {
