--- a/projs/batchfield-react/src/components/priceDetail.css
+++ b/projs/batchfield-react/src/components/priceDetail.css
@@ -1,3 +1,7 @@
+.responsive-img.featured-image {
+  width: 100%;
+  max-width: 400px; }
+
 .container.topic_detail .flex_wrapper {
   display: -webkit-box;
   display: -moz-box;
