--- a/projs/batchfield-react/src/components/priceDetail.scss
+++ b/projs/batchfield-react/src/components/priceDetail.scss
@@ -1,3 +1,10 @@
+.responsive-img.featured-image{
+  width:100%;
+  max-width:400px;
+}
+
+
+
 
 .container.topic_detail .flex_wrapper{
     display: -webkit-box;
