implement bookig kit system and hide the original detail page_intro section

--- a/projs/batchfield/app/styles/main.scss
+++ b/projs/batchfield/app/styles/main.scss
@@ -62,6 +62,7 @@
 @import "components/landing/promotion-owl-carousel";
 @import "components/footer/footer";
 	@import "components/shootings_and_price/shootings_and_price";
+	@import "components/fotoshoting_detail_page/_fotoshoting_detail_page_intro";
 
 
 
