re-style the entire booking system on babybauch page at the moment

--- a/projs/batchfield/app/styles/components/fotoshoting_detail_page/_fotoshoting_detail_page_intro.scss
+++ b/projs/batchfield/app/styles/components/fotoshoting_detail_page/_fotoshoting_detail_page_intro.scss
@@ -2,14 +2,11 @@
 @import './owl-carousel';
 
 
-@import './bookingkit;
+@import './bookingkit';
 
 
 .fotoshoting_detail_page_intro{
-	display:none;
+	/*display:none;*/
 }
 
 
-.bk-checkout-footer{
-	display:none;
-}
