--- a/projs/batchfield/app/styles/main.scss
+++ b/projs/batchfield/app/styles/main.scss
@@ -63,6 +63,7 @@
 @import "components/footer/footer";
 	@import "components/shootings_and_price/shootings_and_price";
 	@import "components/fotoshoting_detail_page/_fotoshoting_detail_page_intro";
+	@import "components/online-gutschein-overview-page/_online-gutschein-overview-page";
 
 
 
