re-structure bookingkit overview page and change the button linking funciton inside of  fotoshooting details page

--- a/projs/batchfield/app/include/price_detail_page_bullet_links.html
+++ b/projs/batchfield/app/include/price_detail_page_bullet_links.html
@@ -4,6 +4,16 @@
 
 <a href="tel:+49-8031-8878777" class="button"><i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;uns anrufen</a>
 <!-- <a href="/termin/index.html" class="button termin"><i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp;Online Termin</a> -->
-<a href="/images/gutschein.png" target="_blank" class="button"><i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp;Gutschein verschenken</a>
+<a href="/online_gutschein/online_gutschein.html" target="_blank" class="button gutschein_verschenken"><i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp;Gutschein verschenken</a>
 
 
+
+
+
+<!-- bookingkit button  -->
+<!-- 
+
+<a href="tel:+49-8031-8878777" class="button">&nbsp;&nbsp;&nbsp;UNS ANRUFEN</a>
+    <div  class="button bookingkit_gutschine_button_wrapper"><div id="bookingKitContainer"></div></div>
+-->
+ 
