--- a/projs/batchfield/app/styles/components/fotoshoting_detail_page/_bookingkit.scss
+++ b/projs/batchfield/app/styles/components/fotoshoting_detail_page/_bookingkit.scss
@@ -96,4 +96,17 @@
 
 
 
+.button.gutschein_verschenken{
+    background-color:#E91E63 !important;
+    border:2px solid #E91E63 !important;
+    color:white!important;
+    &:hover{
+         background-color:white !important;
+         color:#E91E63!important;
+    };
+}
+
+
+
+
 
