--- a/projs/batchfield/app/styles/components/online-gutschein-overview-page/_online-gutschein-overview-page.scss
+++ b/projs/batchfield/app/styles/components/online-gutschein-overview-page/_online-gutschein-overview-page.scss
@@ -9,7 +9,7 @@ $dark_gray: #D4D4D4;
 body.online-gutschein-overview-page{
 	#bookingKitContainer{
 		background-color:#FCFCFC !important;
-		padding:70px 0px !important
+		padding:70px 0px !important;
 	/*	display:flex;
 		flex-wrap: wrap;*/
 		.bk-events-item {
