--- a/projs/batchfield/app/styles/components/landing/promotion-owl-carousel.scss
+++ b/projs/batchfield/app/styles/components/landing/promotion-owl-carousel.scss
@@ -10,6 +10,12 @@
 
 
       .section.landing-promotion{
+        @media screen and (max-width:640px) {
+            margin-top:-50px;
+            h3{
+              margin-bottom:-7px;
+            }
+        }
         padding-top:20px;
         .row{
           margin-bottom:0;
